# study-abroad-app

./: .gitignore  README.md  dev.sh  docker-compose.yml
backend/: .env.example  .gitignore  README.md  ]  alembic.ini  pyproject.toml  requirements.txt  run_migration.py
backend/alembic/: README.md  env.py
backend/alembic/versions/: 0001_initial_baseline.py  0002_add_appointment_idempotency_key.py  0003_add_vendor_lead_tables.py  b49ef0fcc0b4_0003_invitations_support_tickets.py  c85279be5773_0002_platform_admin_workspace_requests.py  e76c54a0aa89_0001_initial_base.py
backend/app/: __init__.py  main.py  run_api.py  worker.py
backend/app/api/: deps.py  leads.py  me.py  router.py  vendor_console.py  webhooks.py  workspace_requests.py
backend/app/core/: config.py  enums.py  logging_config.py  observability.py
backend/app/db/: base.py  session.py
backend/app/llm/: service.py
backend/app/messaging/: __init__.py  base.py  dispatcher.py  telegram.py  whatsapp.py
backend/app/middleware/: exception_handler.py  rate_limiter.py  request_id.py  request_timing.py  security_headers.py
backend/app/redis/: __init__.py  client.py  state_store.py
backend/app/schemas/: admin.py  leads.py  messages.py  ops.py  site.py  state.py  support.py  workspace.py
backend/docs/: FUTURE_DB_PLAN.md  LOGGING.md
backend/scripts/: grant_platform_role.py
backend/sql/: README.md  migration_v2.sql  rollback_v2.sql  schema.sql  seed_demo.sql  verify_migration.sql
backend/tests/: conftest.py  test_config_validators.py  test_db_session_url.py  test_telegram_webhook.py
(+112 files in other folders)
