[project]
name = "agency-saas-platform"
version = "0.1.0"
description = "Multi-tenant study-abroad SaaS platform"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "sqlalchemy[asyncio]>=2.0.28",
    "asyncpg>=0.29.0",
    "greenlet>=3.0.3",
    "alembic>=1.13.1",
    "pydantic>=2.6.4",
    "pydantic-settings>=2.2.1",
    "redis>=5.0.3",
    "arq>=0.25.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",
    "structlog>=24.1.0",
    "orjson>=3.10.0",
    "slowapi>=0.1.9",
]

[dependency-groups]
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=5.0.0",
    "ruff>=0.3.4",
    "mypy>=1.9.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
